fill in raw content 1.0

--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -1,1 +1,12 @@
-<p>navbar works!</p>
+<div><h1>Logo(N)</h1></div>
+
+<div>
+    <ul>
+        <li><a [routerLink]="['/home']" fragment="hero">Home</a></li>
+        <li><a [routerLink]="['/home']" fragment="about">About</a></li>
+        <li><a [routerLink]="['/home']" fragment="education-certification">Education/Certification</a></li>
+        <li><a [routerLink]="['/home']" fragment="projects-experience">Projects/Experience</a></li>
+        <li><a [routerLink]="['/home']" fragment="articles">Articles</a></li>
+        <li><a [routerLink]="['/home']" fragment="contact">Contact</a></li>
+    </ul>
+</div>
