--- a/src/app/home/about/about.component.html
+++ b/src/app/home/about/about.component.html
@@ -1,1 +1,9 @@
-<p>about works!</p>
+<h1>About</h1>
+<div><img
+        src="https://source.unsplash.com/random/200x200?black,male,portrait/"
+        alt="carousel-img"></div>
+<div class="yellow-bar"></div>
+<div><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut quisquam
+        consectetur autem delectus alias corrupti, eligendi aliquid iure sunt
+        dolores optio doloribus voluptates. Aliquam ad officia dolorum explicabo
+        iure ipsam?</p></div>
