--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -15,6 +15,7 @@ main {
     gap: 1rem;
     grid-template-columns: 3% 97%;
     grid-template-rows: repeat(6, 1fr);
+    scroll-behavior: smooth;
 }
 
 main section{
