completed scaffolding & content-filling

--- a/src/app/home/projects-experience/projects-experience.component.html
+++ b/src/app/home/projects-experience/projects-experience.component.html
@@ -1,1 +1,23 @@
-<p>projects-experience works!</p>
+<h1>Projects|Experience</h1>
+<div class="showcase">
+    <div>
+        <img
+            src="https://source.unsplash.com/random/200x200?react,code,design/"
+            alt="carousel-img">
+        <h3>Tutorial Showcaser</h3>
+        <p><span>React</span>,<span>Firebase functions</span></p>
+    </div>
+
+    <div class="red-bar"></div>
+    <div>
+        <img
+            src="https://source.unsplash.com/random/200x200?angular,design"
+            alt="carousel-img">
+        <h3>Portfolio Website</h3>
+        <p><span>angular</span>,<span>html</span></p>
+    </div>
+</div>
+<div><ul>
+        <li><a href="#">Download CV</a></li>
+        <li><a href="https://github.com/El-Nico" target="_blank">Go to Github</a></li>
+    </ul></div>
