--- a/src/app/home/articles/articles.component.css
+++ b/src/app/home/articles/articles.component.css
@@ -1,6 +1,12 @@
-.container{
+/* .container{
     height: 100%;
     width: 100%;
     display: grid;
     place-content: center;
+} */
+
+.article-grid{
+    display: grid;
+    gap: 1rem;
+    grid-template-columns: 1fr 1fr;
 }
