--- a/src/app/home/articles/articles.component.html
+++ b/src/app/home/articles/articles.component.html
@@ -1,5 +1,33 @@
 <div class="container">
-    <div class="center">
-        <a [routerLink]="['/articles','article-id']">article/:id</a>
+    <h1>Articles</h1>
+    <div class="article-grid">
+        <div class="center">
+            <a [routerLink]="['/articles','article-id']">article/:id</a>
+        </div>
+        <div class="center">
+            <a [routerLink]="['/articles','article-id']">article/:id</a>
+        </div>
+        <div class="center">
+            <a [routerLink]="['/articles','article-id']">article/:id</a>
+        </div>
+        <div class="center">
+            <a [routerLink]="['/articles','article-id']">article/:id</a>
+        </div>
+        <div class="center">
+            <a [routerLink]="['/articles','article-id']">article/:id</a>
+        </div>
+        <div class="center">
+            <a [routerLink]="['/articles','article-id']">article/:id</a>
+        </div>
+        <div class="center">
+            <a [routerLink]="['/articles','article-id']">article/:id</a>
+        </div>
+        <div class="center">
+            <a [routerLink]="['/articles','article-id']">article/:id</a>
+        </div>
+        <div class="center">
+            <a [routerLink]="['/articles','article-id']">article/:id</a>
+        </div>
     </div>
+
 </div>
