style improvements made to navbar

--- a/src/app/home/hero/hero.component.html
+++ b/src/app/home/hero/hero.component.html
@@ -1,17 +1,23 @@
-<h1>Hello my name is Nicholas</h1>
-<img
-    src="https://source.unsplash.com/random/200x200?code,data,web,ai,machine/"
-    alt="carousel-img">
-<p>Data Analysis</p>
-<p>Machine Learning</p>
-<p>Web Development</p>
-<p>Reinforcement Learning</p>
-<img
-    src="https://source.unsplash.com/random/200x200?black,male,portrait/"
-    alt="carousel-img">
-<p>Check out my <a [routerLink]="['/articles','tutorial-showcaser']">Tutorial
-        Showcaser</a> app or</p>
-<ul>
-    <li><a href="#">Download CV</a></li>
-    <li><a href="https://github.com/El-Nico" target="_blank">Go to Github</a></li>
-</ul>
+<main>
+    <h1>Hello my name is Nicholas</h1>
+
+    <div class="skills">
+        <p>Data Analysis</p>
+        <p>Machine Learning</p>
+        <p>Web Development</p>
+        <p>Reinforcement Learning</p>
+    </div>
+
+    <img
+        src="https://source.unsplash.com/random/1200x1200?black,male,portrait/"
+        alt="carousel-img">
+    <p>Check out my
+        <a [routerLink]="['/articles','tutorial-showcaser']">TutorialShowcaser</a>
+        app or
+    </p>
+
+    <ul>
+        <li><a href="#">Download CV</a></li>
+        <li><a href="https://github.com/El-Nico" target="_blank">Go to Github</a></li>
+    </ul>
+</main>
