--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -1,6 +1,10 @@
-<div><h1>Logo(N)</h1></div>
+<nav>
+    <div class="logo">
+        <div class="circle-outer">
+            <div class="circle-inner">N</div>
+        </div>
+    </div>
 
-<div>
     <ul>
         <li><a [routerLink]="['/home']" fragment="hero">Home</a></li>
         <li><a [routerLink]="['/home']" fragment="about">About</a></li>
@@ -9,4 +13,5 @@
         <li><a [routerLink]="['/home']" fragment="articles">Articles</a></li>
         <li><a [routerLink]="['/home']" fragment="contact">Contact</a></li>
     </ul>
-</div>
+
+</nav>
