--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -26,6 +26,23 @@ main section{
 main section#hero{
     grid-column-start: 1;
     grid-column: span 2;
+    background: url('https://source.unsplash.com/random/1200x1200?code,data,web,ai,machine/') no-repeat center top / cover;
+    color: #fff;
+}
+
+/* main section#hero::before {
+        content: "";
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background: rgba(0, 0, 0, 0.6);
+        z-index: -1;
+} */
+
+main section#hero>app-hero{
+    z-index: 2;
 }
 
 
