--- a/src/app/home/education-certification/education-certification.component.html
+++ b/src/app/home/education-certification/education-certification.component.html
@@ -1,20 +1,25 @@
 
-<h1>Education|Certification</h1>
-<div class="showcase">
-    <div>
-        <img
-            src="https://source.unsplash.com/random/200x200?degree,computer,science/"
-            alt="carousel-img">
-        <h3>Bsc. Computing Level 7</h3>
-        <p><span>college</span>,<span>level 7</span></p>
-    </div>
+<div class="page">
+    <header><h1>Education|Certification</h1></header>
+    <main>
+        <div class="showcase">
+            <div>
+                <img
+                    src="https://source.unsplash.com/random/200x200?degree,computer,science/"
+                    alt="carousel-img">
+                <h3>Bsc. Computing Level 7</h3>
+                <p><span>college</span>,<span>level 7</span></p>
+            </div>
 
-    <div class="red-bar"></div>
-    <div>
-        <img
-            src="https://source.unsplash.com/random/200x200?AI,Certification"
-            alt="carousel-img">
-        <h3>Tensorflow Developer Certificate</h3>
-        <p><span>certification</span>,<span>deep learning</span></p>
-    </div>
+            <div class="red-bar"></div>
+            <div>
+                <img
+                    src="https://source.unsplash.com/random/200x200?AI,Certification"
+                    alt="carousel-img">
+                <h3>Tensorflow Developer Certificate</h3>
+                <p><span>certification</span>,<span>deep learning</span></p>
+            </div>
+        </div>
+
+    </main>
 </div>
