--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,8 @@
 
-<header class="sticky">
+<!-- <header class="sticky">
   <app-navbar></app-navbar>
-</header>
+</header> -->
 <main>
   <router-outlet></router-outlet>
 </main>
-<footer><app-footer></app-footer></footer>
+<!-- <footer><app-footer></app-footer></footer> -->
