--- a/src/app/article/article.component.html
+++ b/src/app/article/article.component.html
@@ -1,1 +1,7 @@
-<p>article works!</p>
+<div class="page">
+    <header>
+        <app-navbar></app-navbar>
+    </header>
+    <main><p>article works!</p></main>
+    <app-footer></app-footer>
+</div>
