--- a/src/app/home/articles/articles.component.html
+++ b/src/app/home/articles/articles.component.html
@@ -1,33 +1,35 @@
-<div class="container">
-    <h1>Articles</h1>
-    <div class="article-grid">
-        <div class="center">
-            <a [routerLink]="['/articles','article-id']">article/:id</a>
-        </div>
-        <div class="center">
-            <a [routerLink]="['/articles','article-id']">article/:id</a>
-        </div>
-        <div class="center">
-            <a [routerLink]="['/articles','article-id']">article/:id</a>
-        </div>
-        <div class="center">
-            <a [routerLink]="['/articles','article-id']">article/:id</a>
-        </div>
-        <div class="center">
-            <a [routerLink]="['/articles','article-id']">article/:id</a>
-        </div>
-        <div class="center">
-            <a [routerLink]="['/articles','article-id']">article/:id</a>
-        </div>
-        <div class="center">
-            <a [routerLink]="['/articles','article-id']">article/:id</a>
-        </div>
-        <div class="center">
-            <a [routerLink]="['/articles','article-id']">article/:id</a>
-        </div>
-        <div class="center">
-            <a [routerLink]="['/articles','article-id']">article/:id</a>
-        </div>
-    </div>
+<div class="page">
+    <header><h1>Articles</h1></header>
 
+    <main class="container">
+        <div class="article-grid">
+            <div class="center">
+                <a [routerLink]="['/articles','article-id']">article/:id</a>
+            </div>
+            <div class="center">
+                <a [routerLink]="['/articles','article-id']">article/:id</a>
+            </div>
+            <div class="center">
+                <a [routerLink]="['/articles','article-id']">article/:id</a>
+            </div>
+            <div class="center">
+                <a [routerLink]="['/articles','article-id']">article/:id</a>
+            </div>
+            <div class="center">
+                <a [routerLink]="['/articles','article-id']">article/:id</a>
+            </div>
+            <div class="center">
+                <a [routerLink]="['/articles','article-id']">article/:id</a>
+            </div>
+            <div class="center">
+                <a [routerLink]="['/articles','article-id']">article/:id</a>
+            </div>
+            <div class="center">
+                <a [routerLink]="['/articles','article-id']">article/:id</a>
+            </div>
+            <div class="center">
+                <a [routerLink]="['/articles','article-id']">article/:id</a>
+            </div>
+        </div>
+    </main>
 </div>
