--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,15 +1,28 @@
-<main>
-
-    <div class="yellow-bar grid-row-span-6"></div>
+<header>
+    <div class="sticky">
+        <app-navbar></app-navbar>
+    </div>
 
     <section id="hero" class="grid-col-span-2">
-        <app-hero></app-hero>
+        <div class="header-content">
+            <app-hero></app-hero>
+        </div>
     </section>
-    <section id="about"><app-about></app-about></section>
-    <section id="education-certification"><app-education-certification></app-education-certification></section>
-    <section id="projects-experience"><app-projects-experience></app-projects-experience>
-    </section>
-    <section id="articles"><app-articles></app-articles></section>
-    <section id="contact"><app-contact></app-contact></section>
+</header>
 
+<main>
+    <div class="home-container">
+        <div class="yellow-bar"></div>
+
+        <div class="page-sections">
+            <section id="about"><app-about></app-about></section>
+            <section id="education-certification"><app-education-certification></app-education-certification></section>
+            <section id="projects-experience"><app-projects-experience></app-projects-experience>
+            </section>
+            <section id="articles"><app-articles></app-articles></section>
+            <section id="contact"><app-contact></app-contact></section>
+        </div>
+
+    </div>
 </main>
+<footer><app-footer></app-footer></footer>
