--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -1,5 +1,5 @@
 <main>
-    <div class="container">
+    <div class="page-container">
 
         <a href="https://github.com/El-Nico" target="_blank"
             aria-label="Homepage"
