--- a/src/app/home/about/about.component.html
+++ b/src/app/home/about/about.component.html
@@ -1,34 +1,39 @@
-<div class="page">
-        <div class="header">
-                <h1>About</h1>
+<div class="page background-medium">
+        <div class="page-container">
+                <div class="header">
+                        <h1>About</h1>
+                </div>
+
+                <main>
+                        <div class="about-container">
+                                <div class="image-bar">
+                                        <img
+                                                src="https://source.unsplash.com/random/200x200?black,male,portrait/"
+                                                alt="carousel-img">
+                                        <div class="yellow-bar"></div>
+                                </div>
+
+                                <div>
+                                        <p>Lorem ipsum dolor sit amet
+                                                consectetur
+                                                adipisicing
+                                                elit. Ut
+                                                quisquam
+                                                consectetur autem delectus alias
+                                                corrupti,
+                                                eligendi
+                                                aliquid iure sunt
+                                                dolores optio doloribus
+                                                voluptates.
+                                                Aliquam ad
+                                                officia
+                                                dolorum explicabo
+                                                iure ipsam?
+                                        </p>
+                                </div>
+
+                        </div>
+                </main>
         </div>
 
-        <main>
-                <div class="about-container">
-                        <div class="image-bar">
-                                <img
-                                        src="https://source.unsplash.com/random/200x200?black,male,portrait/"
-                                        alt="carousel-img">
-                                <div class="yellow-bar"></div>
-                        </div>
-
-                        <div>
-                                <p>Lorem ipsum dolor sit amet consectetur
-                                        adipisicing
-                                        elit. Ut
-                                        quisquam
-                                        consectetur autem delectus alias
-                                        corrupti,
-                                        eligendi
-                                        aliquid iure sunt
-                                        dolores optio doloribus voluptates.
-                                        Aliquam ad
-                                        officia
-                                        dolorum explicabo
-                                        iure ipsam?
-                                </p>
-                        </div>
-
-                </div>
-        </main>
 </div>
