--- a/src/app/home/about/about.component.css
+++ b/src/app/home/about/about.component.css
@@ -1,7 +1,12 @@
+.page{
+    /* display: grid; */
+    height: 100vh;
+    grid-template-columns: 1fr;
+}
 .yellow-bar{
     width: 2rem;
     height: 100%;
-    background-color: yellow;
+    background-color: var(--main-colour);
     margin-inline: 1rem;
 }
 
@@ -9,7 +14,6 @@ main{
     height: 100%;
     display: grid;
     place-content: start;
-    background-color: lightgrey;
 }
 
 .about-container{
