--- a/src/app/home/articles/articles.component.css
+++ b/src/app/home/articles/articles.component.css
@@ -1,9 +1,6 @@
-/* .container{
-    height: 100%;
-    width: 100%;
-    display: grid;
-    place-content: center;
-} */
+.page{
+    height: 100vh;
+}
 
 .article-grid{
     display: grid;
