--- a/src/app/home/articles/articles.component.html
+++ b/src/app/home/articles/articles.component.html
@@ -1,35 +1,38 @@
-<div class="page">
-    <header><h1>Articles</h1></header>
+<div class="page background-light">
+    <div class="page-container">
+        <header><h1>Articles</h1></header>
 
-    <main class="container">
-        <div class="article-grid">
-            <div class="center">
-                <a [routerLink]="['/articles','article-id']">article/:id</a>
+        <main class="container">
+            <div class="article-grid">
+                <div class="center">
+                    <a [routerLink]="['/articles','article-id']">article/:id</a>
+                </div>
+                <div class="center">
+                    <a [routerLink]="['/articles','article-id']">article/:id</a>
+                </div>
+                <div class="center">
+                    <a [routerLink]="['/articles','article-id']">article/:id</a>
+                </div>
+                <div class="center">
+                    <a [routerLink]="['/articles','article-id']">article/:id</a>
+                </div>
+                <div class="center">
+                    <a [routerLink]="['/articles','article-id']">article/:id</a>
+                </div>
+                <div class="center">
+                    <a [routerLink]="['/articles','article-id']">article/:id</a>
+                </div>
+                <div class="center">
+                    <a [routerLink]="['/articles','article-id']">article/:id</a>
+                </div>
+                <div class="center">
+                    <a [routerLink]="['/articles','article-id']">article/:id</a>
+                </div>
+                <div class="center">
+                    <a [routerLink]="['/articles','article-id']">article/:id</a>
+                </div>
             </div>
-            <div class="center">
-                <a [routerLink]="['/articles','article-id']">article/:id</a>
-            </div>
-            <div class="center">
-                <a [routerLink]="['/articles','article-id']">article/:id</a>
-            </div>
-            <div class="center">
-                <a [routerLink]="['/articles','article-id']">article/:id</a>
-            </div>
-            <div class="center">
-                <a [routerLink]="['/articles','article-id']">article/:id</a>
-            </div>
-            <div class="center">
-                <a [routerLink]="['/articles','article-id']">article/:id</a>
-            </div>
-            <div class="center">
-                <a [routerLink]="['/articles','article-id']">article/:id</a>
-            </div>
-            <div class="center">
-                <a [routerLink]="['/articles','article-id']">article/:id</a>
-            </div>
-            <div class="center">
-                <a [routerLink]="['/articles','article-id']">article/:id</a>
-            </div>
-        </div>
-    </main>
+        </main>
+    </div>
+
 </div>
