--- a/src/app/home/contact/contact.component.html
+++ b/src/app/home/contact/contact.component.html
@@ -1,22 +1,25 @@
-<div class="page">
-    <header><h1>Contact Me</h1></header>
-    <h3>Here's how to reach me</h3>
-    <form action="/action_page.php">
-        <label for="name">Name</label><br>
-        <input type="text" id="name" name="name" value="John Doe"><br>
-        <label for="email">Email Address</label><br>
-        <input type="email" id="email" name="email"
-            value="your_email@server.com"><br><br>
+<div class="page background-light">
+    <div class="page-container">
+        <header><h1>Contact Me</h1></header>
+        <h3>Here's how to reach me</h3>
+        <form action="/action_page.php">
+            <label for="name">Name</label><br>
+            <input type="text" id="name" name="name" value="John Doe"><br>
+            <label for="email">Email Address</label><br>
+            <input type="email" id="email" name="email"
+                value="your_email@server.com"><br><br>
 
-        <label for="subject">Subject</label><br>
-        <input type="text" id="subject" name="subject" value="Your Subject"><br>
+            <label for="subject">Subject</label><br>
+            <input type="text" id="subject" name="subject" value="Your Subject"><br>
 
-        <label for="phone">Phone Number</label><br>
-        <input type="number" id="phone" name="phone" value="000"><br>
+            <label for="phone">Phone Number</label><br>
+            <input type="number" id="phone" name="phone" value="000"><br>
 
-        <label for="message">Write Message</label>
-        <textarea id="message" name="message" placeholder="Write message.."
-            style="height:200px"></textarea>
-        <input type="submit" value="Submit">
-    </form>
+            <label for="message">Write Message</label>
+            <textarea id="message" name="message" placeholder="Write message.."
+                style="height:200px"></textarea>
+            <input type="submit" value="Submit">
+        </form>
+    </div>
+
 </div>
