--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -4,23 +4,22 @@
         <app-hero></app-hero>
     </header>
 
-    <div class="page-container">
-        <main>
-            <div class="home-container">
-                <div class="yellow-bar"></div>
-
-                <div class="page-sections">
-                    <section id="about"><app-about></app-about></section>
-                    <section id="education-certification"><app-education-certification></app-education-certification></section>
-                    <section id="projects-experience"><app-projects-experience></app-projects-experience>
-                    </section>
-                    <section id="articles"><app-articles></app-articles></section>
-                    <section id="contact"><app-contact></app-contact></section>
-                </div>
-
-            </div>
-        </main>
-    </div>
+    <main>
+        <div class="yellow-bar">
+            <div class="section" [routerLink]="['/home']" fragment="about"></div>
+            <div class="section" [routerLink]="['/home']"
+                fragment="education-certification"></div>
+            <div class="section" [routerLink]="['/home']"
+                fragment="projects-experience"></div>
+            <div class="section" [routerLink]="['/home']" fragment="articles"></div>
+            <div class="section" [routerLink]="['/home']" fragment="contact"></div>
+        </div>
+        <app-about id="about"></app-about>
+        <app-education-certification id="education-certification"></app-education-certification>
+        <app-projects-experience id="projects-experience"></app-projects-experience>
+        <app-articles id="articles"></app-articles>
+        <app-contact id="contact"></app-contact>
+    </main>
 
     <footer><app-footer></app-footer></footer>
 </div>
