--- a/src/app/home/projects-experience/projects-experience.component.html
+++ b/src/app/home/projects-experience/projects-experience.component.html
@@ -1,30 +1,34 @@
-<div class="page">
-    <header><h1>Projects|Experience</h1></header>
+<div class="page background-medium">
+    <div class="page-container">
+        <header><h1>Projects|Experience</h1></header>
 
-    <main>
-        <div class="showcase">
-            <div>
-                <img
-                    src="https://source.unsplash.com/random/200x200?react,code,design/"
-                    alt="carousel-img">
-                <h3>Tutorial Showcaser</h3>
-                <p><span>React</span>,<span>Firebase functions</span></p>
-            </div>
+        <main>
+            <div class="showcase">
+                <div>
+                    <img
+                        src="https://source.unsplash.com/random/200x200?react,code,design/"
+                        alt="carousel-img">
+                    <h3>Tutorial Showcaser</h3>
+                    <p><span>React</span>,<span>Firebase functions</span></p>
+                </div>
 
-            <div class="red-bar"></div>
-            <div>
-                <img
-                    src="https://source.unsplash.com/random/200x200?angular,design"
-                    alt="carousel-img">
-                <h3>Portfolio Website</h3>
-                <p><span>angular</span>,<span>html</span></p>
+                <div class="red-bar"></div>
+                <div>
+                    <img
+                        src="https://source.unsplash.com/random/200x200?angular,design"
+                        alt="carousel-img">
+                    <h3>Portfolio Website</h3>
+                    <p><span>angular</span>,<span>html</span></p>
+                </div>
             </div>
-        </div>
-        <div><ul>
-                <li><a href="#">Download CV</a></li>
-                <li><a href="https://github.com/El-Nico" target="_blank">Go to
-                        Github</a></li>
-            </ul>
-        </div>
-    </main>
+            <div><ul>
+                    <li><a href="#">Download CV</a></li>
+                    <li><a href="https://github.com/El-Nico" target="_blank">Go
+                            to
+                            Github</a></li>
+                </ul>
+            </div>
+        </main>
+    </div>
+
 </div>
