--- a/src/app/welcome/welcome.component.html
+++ b/src/app/welcome/welcome.component.html
@@ -4,16 +4,15 @@
             <div class="welcome-container">
                 <ul>
                     <li>
-                        <a href="https://nicholas-eruba.com/home"
+                        <a href="https://portfolio-9f16d.web.app/home"
                             target="_blank">
                             Version 2020
                         </a>
                     </li>
                     <li>
                         <a [routerLink]="['/home']" fragment="hero">
-                            Version 2023
+                            Version 2023(construction in progress)
                         </a>
-
                     </li>
                 </ul>
             </div>
