--- a/src/app/home/about/about.component.html
+++ b/src/app/home/about/about.component.html
@@ -1,4 +1,4 @@
-<div class="page background-medium">
+<div class="page background-light">
         <div class="page-container">
                 <div class="header">
                         <h1>About</h1>
