--- a/src/app/home/education-certification/education-certification.component.html
+++ b/src/app/home/education-certification/education-certification.component.html
@@ -1,5 +1,5 @@
 
-<div class="page background-light">
+<div class="page background-medium">
     <div class="page-container">
         <header><h1>Education|Certification</h1></header>
         <main>
