--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -6,6 +6,7 @@
 
     <main>
         <div class="yellow-bar">
+            <div class="section" [routerLink]="['/home']"></div>
             <div class="section" [routerLink]="['/home']" fragment="about"></div>
             <div class="section" [routerLink]="['/home']"
                 fragment="education-certification"></div>
