--- a/src/app/home/projects-experience/projects-experience.component.html
+++ b/src/app/home/projects-experience/projects-experience.component.html
@@ -1,4 +1,4 @@
-<div class="page background-medium">
+<div class="page background-light">
     <div class="page-container">
         <header><h1>Projects|Experience</h1></header>
 
