--- a/src/app/home/about/about.component.css
+++ b/src/app/home/about/about.component.css
@@ -1,7 +1,7 @@
 .page{
-    /* display: grid; */
     height: 100vh;
-    grid-template-columns: 1fr;
+    padding-inline: 2rem;
+    display: grid;
 }
 .yellow-bar{
     width: 2rem;
