--- a/src/app/home/articles/articles.component.html
+++ b/src/app/home/articles/articles.component.html
@@ -1,4 +1,4 @@
-<div class="page background-light">
+<div class="page background-medium">
     <div class="page-container">
         <header><h1>Articles</h1></header>
 
