--- a/src/app/shared/navbar/navbar.component.css
+++ b/src/app/shared/navbar/navbar.component.css
@@ -1,8 +1,7 @@
-nav{
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    justify-content: space-between;
+.page{
+    color: #fff;
 }
+
 
 h3{
     padding: 1rem;
@@ -11,4 +10,50 @@ h3{
 .circle-outer,.circle-inner{
     width: fit-content;
     border-radius: 50%;
+}
+
+.nav-container{
+    display: flex;
+    /* grid-template-columns: repeat( auto-fit, minmax(320px, max-content)); */
+    /* grid-template-columns: min-content minmax(min-content, max-content); */
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
+
+.logo{
+    flex: 1;
+    align-self: center;
+}
+
+.circle-outer{
+    margin: 0 auto;
+}
+
+ul{
+    display: flex;
+    flex-wrap: wrap;
+}
+
+ul>Li{
+    padding: 1rem 1.5rem;
+    flex:1;
+}
+
+ul>li>a{
+    color: #fff;
+    text-transform: uppercase;
+    border-bottom: 3px transparent solid;
+    padding-bottom: 0.5rem;
+    transition: border-color 0.5s;
+    cursor: pointer;
+
+    font-size: 1rem;
+}
+
+ul>li>a:hover{
+border-color: var(--medium-colour);
+}
+
+ul>li>a.current{
+    border-color: var(--main-colour);
 }
