--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -1,6 +1,6 @@
 <div class="page">
-    <div>
-        <nav class="page-container">
+    <nav class="page-container">
+        <div class="nav-container">
             <div class="logo">
                 <div class="circle-outer">
                     <div class="circle-inner">
@@ -9,7 +9,7 @@
                 </div>
             </div>
 
-            <div>
+            <div class="nav-links">
                 <ul>
                     <li><a [routerLink]="['/home']">Home</a></li>
                     <li><a [routerLink]="['/home']" fragment="about">About</a></li>
@@ -21,6 +21,6 @@
                     <li><a [routerLink]="['/home']" fragment="contact">Contact</a></li>
                 </ul>
             </div>
-        </nav>
-    </div>
+        </div>
+    </nav>
 </div>
