--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -1,7 +1,7 @@
 <div class="page">
     <nav class="page-container">
         <div class="nav-container">
-            <div class="logo">
+            <div class="logo" [routerLink]="['/home']">
                 <div class="circle-outer">
                     <div class="circle-inner">
                         <h3>N</h3>
