--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -14,9 +14,10 @@
                 </a>
             </div>
             <div class="copyright">
-                <p>Copyright &copy; 2023 <a href="https://nicholas-eruba.com"
-                        target="_blank">Nicholas
-                        Chibuike-Eruba</a> All Rights Reserved</p>
+                <p>Copyright &copy; 2023
+                    <a href="https://nicholas-eruba.com" target="_blank">Nicholas
+                        Chibuike-Eruba</a>
+                    All Rights Reserved</p>
             </div>
         </div>
 
