--- a/src/app/home/contact/contact.component.html
+++ b/src/app/home/contact/contact.component.html
@@ -1,24 +1,62 @@
 <div class="page background-light">
     <div class="page-container">
-        <header><h1>Contact Me</h1></header>
-        <h3>Here's how to reach me</h3>
-        <form action="/action_page.php">
-            <label for="name">Name</label><br>
-            <input type="text" id="name" name="name" value="John Doe"><br>
-            <label for="email">Email Address</label><br>
-            <input type="email" id="email" name="email"
-                value="your_email@server.com"><br><br>
+        <header><h1 class="section-title">Contact Me</h1></header>
+        <div class="bottom-line"></div>
+        <p class="leaad">Here's how to reach me</p>
+        <form class="form" [formGroup]="contactForm" (ngSubmit)="onSubmit()">
+            <div class="text-fields">
 
-            <label for="subject">Subject</label><br>
-            <input type="text" id="subject" name="subject" value="Your Subject"><br>
+                <div class="text-input name-input">
+                    <!-- <label for="name">Name</label><br> -->
+                    <input type="text" id="name" formControlName="name"
+                        placeholder="Name"
+                        [class.invalid]="checkInvalid('name')"><br>
+                    <span class="error" *ngIf="checkInvalid('name')"> field not
+                        valid</span>
+                </div>
 
-            <label for="phone">Phone Number</label><br>
-            <input type="number" id="phone" name="phone" value="000"><br>
+                <div class="text-input email-input">
+                    <!-- <label for="email">Email Address</label><br> -->
+                    <input type="email" id="email" formControlName="email"
+                        placeholder="E-Mail"
+                        [class.invalid]="checkInvalid('email')"><br><br>
+                    <span class="error" *ngIf="checkInvalid('email')"> field not
+                        valid</span>
+                </div>
 
-            <label for="message">Write Message</label>
-            <textarea id="message" name="message" placeholder="Write message.."
-                style="height:200px"></textarea>
-            <input type="submit" value="Submit">
+                <div class="text-input subject-input">
+                    <!-- <label for="subject">Subject</label><br> -->
+                    <input type="text" id="subject" formControlName="subject"
+                        placeholder="Subject"
+                        [class.invalid]="checkInvalid('subject')"><br>
+                    <span class="error" *ngIf="checkInvalid('subject')"> field
+                        not
+                        valid</span>
+                </div>
+
+                <div class="text-input phone-input">
+                    <!-- <label for="phone">Phone Number</label><br> -->
+                    <input type="number" id="phone" formControlName="phone"
+                        placeholder="Phone Number"
+                        [class.invalid]="checkInvalid('phone')"><br>
+                    <span class="error" *ngIf="checkInvalid('phone')"> field not
+                        valid</span>
+                </div>
+
+                <div class="text-input message-input">
+                    <!-- <label for="message">Write Message</label> -->
+                    <textarea id="message" formControlName="message"
+                        placeholder="Write message.."
+                        style="height:100px; width: 100%;"
+                        [class.invalid]="checkInvalid('message')"></textarea>
+                    <span class="error" *ngIf="checkInvalid('message')"> field
+                        not
+                        valid</span>
+                </div>
+
+            </div>
+
+            <button type="submit" class="btn-dark">Submit</button>
         </form>
     </div>
 
