--- a/src/app/home/education-certification/edu-cert-item/edu-cert-item.component.html
+++ b/src/app/home/education-certification/edu-cert-item/edu-cert-item.component.html
@@ -1,7 +1,12 @@
-<div>
-    <img
-        src="https://source.unsplash.com/random/200x200?degree,computer,science/"
-        alt="carousel-img">
-    <h3>Bsc. Computing Level 7</h3>
-    <p><span>college</span>,<span>level 7</span></p>
+<div class="item-container">
+    <div class="img-cover">
+        <img
+            src="https://source.unsplash.com/random/200x200?degree,computer,science/"
+            alt="carousel-img">
+    </div>
+
+    <h3 class="title">Bsc. Computing Level 7</h3>
+    <p><span class="pill-tag">college</span><span class="pill-tag">level 7</span>
+        <span class="pill-tag">college</span><span class="pill-tag">level 7</span>
+    </p>
 </div>
