--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -15,6 +15,7 @@ header{
 background: url('https://firebasestorage.googleapis.com/v0/b/portfolio-website-v2-2023.appspot.com/o/hero%2Fdigital-marketing-g200b3fcf4_1280.jpg?alt=media&token=aea5ae74-17db-43eb-b4d0-a427f308f790')  no-repeat 20% 30% / cover;
 position: relative;
 height: 100vh;
+display: grid;
 }
 header::before {
     content: "";
@@ -29,6 +30,7 @@ header::before {
 
 
 header>app-navbar{
+    /* align-self: end; */
     position: absolute;
     top: 0;
     left: 0;
@@ -36,6 +38,7 @@ header>app-navbar{
     z-index: 3;
 }
 header>app-hero{
+    align-self: flex-end;
     position: relative;
     z-index: 2;
 }
