--- a/src/app/home/articles/articles.component.html
+++ b/src/app/home/articles/articles.component.html
@@ -1,38 +1,12 @@
 <div class="page background-medium">
     <div class="page-container">
         <header><h1>Articles</h1></header>
-
         <main class="container">
+            <h2>Editor Picks</h2>
             <div class="article-grid">
-                <div class="center">
-                    <a [routerLink]="['/articles','article-id']">article/:id</a>
-                </div>
-                <div class="center">
-                    <a [routerLink]="['/articles','article-id']">article/:id</a>
-                </div>
-                <div class="center">
-                    <a [routerLink]="['/articles','article-id']">article/:id</a>
-                </div>
-                <div class="center">
-                    <a [routerLink]="['/articles','article-id']">article/:id</a>
-                </div>
-                <div class="center">
-                    <a [routerLink]="['/articles','article-id']">article/:id</a>
-                </div>
-                <div class="center">
-                    <a [routerLink]="['/articles','article-id']">article/:id</a>
-                </div>
-                <div class="center">
-                    <a [routerLink]="['/articles','article-id']">article/:id</a>
-                </div>
-                <div class="center">
-                    <a [routerLink]="['/articles','article-id']">article/:id</a>
-                </div>
-                <div class="center">
-                    <a [routerLink]="['/articles','article-id']">article/:id</a>
-                </div>
+                <app-article-item *ngFor="let item of articleItems"
+                    [item]="item"></app-article-item>
             </div>
         </main>
     </div>
-
 </div>
