--- a/src/app/home/projects-experience/projects-experience.component.html
+++ b/src/app/home/projects-experience/projects-experience.component.html
@@ -20,6 +20,30 @@
                     <h3>Portfolio Website</h3>
                     <p><span>angular</span>,<span>html</span></p>
                 </div>
+                <div class="modal-test">
+                    <div>
+                        <h1>Angular 14 - Modal Popup Example</h1>
+                        <p>{{bodyText}}</p>
+                        <button (click)="modalService.open('modal-1')">Open
+                            Modal 1</button>
+                        <button (click)="modalService.open('modal-2')">Open
+                            Modal 2</button>
+                    </div>
+
+                    <jw-modal id="modal-1">
+                        <h1>A custom modal popup</h1>
+                        <p>Home page text: <input type="text"
+                                [(ngModel)]="bodyText" /></p>
+                        <button (click)="modalService.close();">Close</button>
+                    </jw-modal>
+
+                    <jw-modal id="modal-2">
+                        <h1>A tall modal popup</h1>
+                        <p style="padding-bottom: 1500px;">Close with the button
+                            below or by clicking the background.</p>
+                        <button (click)="modalService.close();">Close</button>
+                    </jw-modal>
+                </div>
             </div>
             <div><ul>
                     <li><a href="#">Download CV</a></li>
